# Brollo

./: .dockerignore  BASH_SCRIPTS_README.txt  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  LICENSE  README.md  STARTUP.md  build.sh  debug-account.ps1  deploy.sh  docker-compose.yml  docker-compose.yml.backup  docker-logs.sh  docker-rebuild.sh  docker-start.sh  docker-stop.sh  init-mongo.js  init-timescaledb.sql  install-deps.sh  min-test.ps1  nginx.conf  restart-all.sh  start-all.sh  status.sh  stop-all.sh  test-account.ps1  test-account.sh  test-accounts-direct.ps1  test-api.ps1  test-direct.ps1  test-docker-api.ps1  test-token.ps1  项目实施总结.md
backend/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.backup  start-all-services.ps1  start-backend.sh  start-quick.ps1  start-user-service.ps1
backend/common/: Cargo.toml
backend/common/src/: auth.rs  constants.rs  error.rs  lib.rs  middleware.rs  models.rs  response.rs
backend/common/src/algorithms/: budget_predictor.rs  kalman_filter.rs  mod.rs
backend/common/src/db/: mod.rs
backend/services/account-service/: Cargo.toml
backend/services/account-service/src/: handlers.rs  main.rs  service.rs
backend/services/budget-service/: Cargo.toml
backend/services/budget-service/src/: handlers.rs  main.rs
backend/services/quote-service/: Cargo.toml
backend/services/quote-service/src/: handlers.rs  main.rs
backend/services/report-service/: Cargo.toml
backend/services/report-service/src/: handlers.rs  main.rs
backend/services/transaction-service/: Cargo.toml
backend/services/transaction-service/src/: handlers.rs  main.rs
backend/services/user-service/: Cargo.toml
backend/services/user-service/src/: handlers.rs  main.rs
frontend/: .gitignore  Dockerfile  Dockerfile.backup  index.html  nginx.conf  package-lock.json  package.json  start-frontend-prod.sh  start-frontend.sh  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Background3D.tsx  Layout.tsx
frontend/src/pages/: Accounts.tsx  Budgets.tsx  Dashboard.tsx  Login.tsx  Register.tsx  Reports.tsx  Reports.tsx.bak  Settings.tsx  Transactions.tsx
frontend/src/stores/: authStore.ts  themeStore.ts
frontend/src/styles/: elementish.css
frontend/src/types/: react-grid-layout.d.ts
frontend/src/utils/: api.ts  constants.ts
systemd/: abook-account.service  abook-user.service  install-services.sh
系统设计/: 05-前端架构设计.md  07-测试与部署方案.md
