[workspace]
members = [
    "services/user-service",
    "services/account-service",
    "services/transaction-service",
    "services/budget-service",
    "services/report-service",
    "services/quote-service",
    "common",
]
resolver = "2"

[workspace.dependencies]
# Web框架
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 数据库
mongodb = "2.8"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.14"

# 认证授权
jsonwebtoken = "9.2"
argon2 = "0.5"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 配置
config = "0.14"
dotenvy = "0.15"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 工具
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"

# 测试
mockall = "0.12"
rstest = "0.18"
